--- a/Firebase test/www/css/index.css
+++ b/Firebase test/www/css/index.css
@@ -6,6 +6,7 @@ body {
     -webkit-touch-callout: none;
     -webkit-text-size-adjust: none;
     -webkit-user-select: none;
+    user-select: none;
     height:100%;
     margin:0px;
     padding:0px;
