--- a/Firebase test/www/css/index.css
+++ b/Firebase test/www/css/index.css
@@ -46,27 +46,16 @@ body {
     -webkit-animation:fade 3000ms infinite;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 100%;
+div {
+
+    border-style: solid;
+    border-width: 1px;
+    margin: 10px;
 }
 
-li {
-    float: left;
-}
+h3 {
 
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+    margin: 10px;
 }
 
 li a:hover:not(.active) {
