--- a/Firebase test/www/css/index.css
+++ b/Firebase test/www/css/index.css
@@ -8,7 +8,7 @@ body {
     -webkit-user-select: none;
     user-select: none;
     text-align: center;
-
+    /*background-image: url("/www/images/keyclublogoblack.png");*/
 }
 
 .event {
